src/objects/ServiceResourceCapacity.object
<CustomObject>
    <fields>
        <fullName>FSL__HoursInUse__c</fullName>
        <formula>FSL__MinutesUsed__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours In Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MinutesUsed__c</fullName>
        <label>Minutes Used</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Work_Items_Allocated__c</fullName>
        <label>Work Items Allocated</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>